# decent-profile-viewer-seed

./: .gitignore  Cargo.toml  README.md  index.html
fixtures/: londonium.profile  simple.tcl  steps.inner  steps.inner.xxx  turbo_bloom.profile
src/: axis.rs  context.rs  graph.rs  lib.rs  msg.rs  parser.rs  profile.rs  scale.rs  utils.rs  view.rs
