[package]
version = "0.0.0"
name = "profile-viewer"
repository = "https://github.com/kuy/profile-viewer"
authors = ["Yuki Kodama <endflow.net@gmail.com>"]
description = "profile-viewer"
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
nom = "7"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
